--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="Profile">
             <h1>Colten Cross</h1>
-            <img id="me" src="me.JPG" alt="Picture of Me">
+            <img id="me" src="me.jpg" alt="Picture of Me">
         </div>
         
         <h2><span>Assignments</span> and Projects</h2>
